--- a/gestionannonce/app/src/main/res/values/strings.xml
+++ b/gestionannonce/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Gestion Annonce</string>
+    <string name="hello_world">HELLO WORLD</string>
 </resources>
